[gd_scene load_steps=2 format=3 uid="uid://b8r6y2q4n3m5x"]

[ext_resource type="Script" uid="uid://csuoethrlo7ii" path="res://src/ui/components/combat/TerrainOverlay.gd" id="1_kj4m2"]

[node name="TerrainOverlay" type="Node2D"]
script = ExtResource("1_kj4m2")

[node name="EffectParticles" type="Node2D" parent="."]

[node name="FireParticles" type="CPUParticles2D" parent="EffectParticles"]
emitting = false
amount = 50
lifetime = 0.8
randomness = 0.2
emission_shape = 3
emission_rect_extents = Vector2(32, 32)
direction = Vector2(0, -1)
spread = 30.0
gravity = Vector2(0, -20)
initial_velocity_min = 30.0
initial_velocity_max = 50.0
scale_amount_min = 2.0
scale_amount_max = 4.0
color = Color(1, 0.4, 0, 0.6)

[node name="SmokeParticles" type="CPUParticles2D" parent="EffectParticles"]
emitting = false
amount = 30
lifetime = 1.2
randomness = 0.3
emission_shape = 3
emission_rect_extents = Vector2(32, 32)
direction = Vector2(0, -1)
spread = 45.0
gravity = Vector2(0, -10)
initial_velocity_min = 20.0
initial_velocity_max = 35.0
scale_amount_min = 3.0
scale_amount_max = 5.0
color = Color(0.7, 0.7, 0.7, 0.5)

[node name="RadiationParticles" type="CPUParticles2D" parent="EffectParticles"]
emitting = false
amount = 40
lifetime = 1.0
randomness = 0.25
emission_shape = 3
emission_rect_extents = Vector2(32, 32)
direction = Vector2(0, -1)
spread = 360.0
gravity = Vector2(0, 0)
initial_velocity_min = 15.0
initial_velocity_max = 25.0
scale_amount_min = 2.0
scale_amount_max = 3.0
color = Color(0, 1, 0, 0.4)
